fixed form buttom spacing

--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,7 @@ input, select {
 }
 
 select {
-  margin-bottom: 40px;
+  margin-bottom: 100px;
 }
 
 /***********************
